tests/ui/error-codes/E0282.stderr
error[E0282]: type annotations needed
  --> $DIR/E0282.rs:2:9
   |
LL |     let x = "hello".chars().rev().collect();
   |         ^
   |
help: consider giving `x` an explicit type
   |
LL |     let x: Vec<_> = "hello".chars().rev().collect();
   |          ++++++++

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0282`.
